fix form and add some style

--- a/week1/assignement/assets/css/screen.css
+++ b/week1/assignement/assets/css/screen.css
@@ -52,6 +52,19 @@ nav a:hover {
 }
 
 /******************************
+ * Form
+ */
+
+label {
+    font-weight: bold;
+}
+
+input.text {
+    padding: 0.5em;
+    width: 150px;
+}
+
+/******************************
  * General & Inline Style
  */
 
