fix .hide style
hide used display: hide; wich can be skip by some screen reader.
text-indent: -999em (with some margin & padding) is now use to avoid that.

--- a/week1/assignment/assets/css/screen.css
+++ b/week1/assignment/assets/css/screen.css
@@ -97,7 +97,10 @@ input.text {
  */
 
 .hide {
-    display: none;
+    text-indent: -999em;
+    margin: 0;
+    padding: 0;
+    height: 0;
 }
 
 a:hover {
