--- a/week2/assignment/rework/style.css
+++ b/week2/assignment/rework/style.css
@@ -69,6 +69,14 @@ nav a {
 }
 
 /******************************
+ * content
+ */
+
+#content {
+    margin: 0 0.5em;
+}
+
+/******************************
  * Secondary Menu
  */
 
@@ -110,6 +118,12 @@ nav a {
 footer {
     border-top: 1px solid #cccccc;
     background-color: #ededed;
+}
+
+footer p {
+    font-size: 0.9em;
+    font-style: italic;
+    margin: 0.5em;
 }
 
 /******************************
