--- a/week1/assignment/assets/css/screen.css
+++ b/week1/assignment/assets/css/screen.css
@@ -93,6 +93,20 @@ input.text {
 }
 
 /******************************
+ * Promo
+ */
+
+.promo {
+    color: #3A87AD;
+    background-color: #D9EDF7;
+    border: 1px solid #BCE8F1;
+    padding: 0 1em;
+    margin-bottom: 1em;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    border-radius: 0.5em;
+}
+
+/******************************
  * General & Inline Style
  */
 
