--- a/week5/assignment/rework/assets/less/style.less
+++ b/week5/assignment/rework/assets/less/style.less
@@ -1,43 +1,62 @@
+// Body
 body {
     font-family:arial, verdana, trebuchet, sans-serif;
-    background-color: #ffffff;
-    color: #000000;
 }
 
-table {width:15em; border-collapse:collapse}
-caption {caption-side:bottom; width:15em; padding-top:0.5em}
-caption span {font-size:smaller}
-td {border:solid thin black; padding:0.5em}
-p {margin-bottom: 1em}
-p.revision {text-align:right; font-style:italic}
+// Table
+table {
+    width:15em;
+    border-collapse:collapse
+}
+td {
+    border:solid thin black;
+    padding:0.5em
+}
+
+// Caption
+caption {
+    caption-side:bottom;
+    width:15em;
+    padding-top:0.5em
+}
+caption span {
+    font-size:smaller
+}
+
+
+p {
+    margin-bottom: 1em
+}
+p.revision {
+    text-align:right; font-style:italic
+}
 
 div.imgHolder {
     width:570px;
     margin:0 auto;
     text-align:center;
-}
+    
+    p.caption {
+        font-size:smaller;
+        font-weight:bold;
 
-div.imgHolder p.caption {
-    font-size:smaller;
-    font-weight:bold;
-}
+        img {
+            border-width:0; margin-right:0.5em;
+        }
+    }
 
-div.imgHolder img {
-    border-top-width:4px;
-    border-top-color: #cccccc;
-    border-top-style: solid;
-    border-left-width:4px;
-    border-left-color: #cccccc;
-    border-left-style: solid;
-    border-right-width:4px;
-    border-right-color: #888888;
-    border-right-style: solid;
-    border-bottom-width:4px;
-    border-bottom-color: #888888;
-    border-bottom-style: solid;
+    img {
+        border-top-width:4px;
+        border-top-color: #cccccc;
+        border-top-style: solid;
+        border-left-width:4px;
+        border-left-color: #cccccc;
+        border-left-style: solid;
+        border-right-width:4px;
+        border-right-color: #888888;
+        border-right-style: solid;
+        border-bottom-width:4px;
+        border-bottom-color: #888888;
+        border-bottom-style: solid;
+    }
 }
-
-div.imgHolder p.caption img {
-    border-width:0; margin-right:0.5em;
-}
-
