--- a/week5/assignment/rework/assets/less/style.less
+++ b/week5/assignment/rework/assets/less/style.less
@@ -41,7 +41,8 @@ div.imgHolder {
         font-weight:bold;
 
         img {
-            border-width:0; margin-right:0.5em;
+            border-width:0;
+            margin-right:0.5em;
         }
     }
 
@@ -58,5 +59,24 @@ div.imgHolder {
         border-bottom-width:4px;
         border-bottom-color: #888888;
         border-bottom-style: solid;
+    }
+}
+
+// Flags
+.flag {
+    width: 16px;
+    height: 11px;
+    background:url(flags.png) no-repeat;
+    .flag-au {
+        background-position: -16px 0;
+    }
+    .flag-de {
+        background-position: -32px 0;
+    }
+    .flag-gb {
+        background-position: 0 -11px;
+    }
+    .flag-us {
+        background-position: -16px -11px;
     }
 }
