--- a/week5/assignment/rework/assets/less/style.less
+++ b/week5/assignment/rework/assets/less/style.less
@@ -4,13 +4,20 @@ body {
 }
 
 // Flags
-.flag {
-	width: 16px;
-	height: 11px;
-	background:url(../images/flags.png) no-repeat;
+
+[class^="flag-"],
+[class*=" flag-"] {
+    display: inline-block;
+    width: 16px;
+    height: 11px;
+    line-height: 14px;
+    vertical-align: text-top;
+    background:url(../images/flags.png);
+    background-position: 16px 11px;
+    background-repeat: no-repeat;
 }
 
-.flag.flag-au {background-position: -16px 0;}
-.flag.flag-de {background-position: -32px 0;}
-.flag.flag-gb {background-position: 0 -11px;}
-.flag.flag-us {background-position: -16px -11px;}
+.flag-au {background-position: -16px 0;}
+.flag-de {background-position: -32px 0;}
+.flag-gb {background-position: 0 -11px;}
+.flag-us {background-position: -16px -11px;}
