--- a/week6/assignment/mobile_styles.less
+++ b/week6/assignment/mobile_styles.less
@@ -1,6 +1,7 @@
 body {
-    //background-color: #000000;
     margin: 0.5em;
+    font: 1em "Lucida Grande", Lucida, Verdana, sans-serif;
+    line-height: 1.25em;
 }
 
 div {
