--- a/week6/assignment/mobile_styles.less
+++ b/week6/assignment/mobile_styles.less
@@ -1,7 +1,6 @@
 body {
     margin: 0.5em;
     font: 1em "Lucida Grande", Lucida, Verdana, sans-serif;
-    line-height: 1.25em;
 }
 
 div {
@@ -10,6 +9,7 @@ div {
     border-radius: 0.5em;
     box-shadow: 3px 3px #cccccc;
     padding: 1em;
+    line-height: 1.25em;
     .vcard {
         span, a {
             float: left;
@@ -25,7 +25,7 @@ div {
 
 
 .button, .button:visited {
-	background: #222 url(/images/alert-overlay.png) repeat-x;
+	background: #222;
 	display: inline-block;
 	padding: 5px 10px 6px;
 	color: #fff;
@@ -42,7 +42,7 @@ div {
 
 	.button:hover							{ background-color: #111; color: #fff; }
 	.button:active							{ top: 1px; }
-	.small.button, .small.button:visited 			{ font-size: 11px; padding: ; }
+	.small.button, .small.button:visited 			{ font-size: 11px; }
 	.button, .button:visited,
 	.medium.button, .medium.button:visited 		{ font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
 	.large.button, .large.button:visited 			{ font-size: 14px; padding: 8px 14px 9px; }
