improve result view

--- a/week7/assignment/assets/less/mobile.less
+++ b/week7/assignment/assets/less/mobile.less
@@ -77,3 +77,7 @@ a.backToTop {
     border-top: thin solid darken(@topColor,10%);
     .button (@topColor, #fff);
 }
+
+.hide {
+    display: none;
+}
